--- a/pom.xml
+++ b/pom.xml
@@ -43,7 +43,7 @@
 				<groupId>org.springframework.boot</groupId>
 				<artifactId>spring-boot-maven-plugin</artifactId>
 			</plugin>
-			<plugin>
+			<plugin>	
 				<groupId>org.jacoco</groupId>
 				<artifactId>jacoco-maven-plugin</artifactId>
 				<version>0.7.9</version>
@@ -68,14 +68,14 @@
 <distributionManagement>
 	<repository>
 		<id>deploymentRepo</id>
-		<name>Internal Releases</name>
-		<url>http://<nexus-ip>:8081/repository/maven-releases/</url>
+		<name>maven-releases</name>
+		<url>http://35.196.161.238:8081/repository/maven-releases/</url>
 	</repository>
  
 	<snapshotRepository>
 		<id>deploymentRepo</id>
 		<name>Internal Releases</name>
-		<url>http://<nexus-ip>:8081/repository/maven-snapshots/</url>
+		<url>http://35.196.161.238:8081/repository/maven-releases//</url>
 	</snapshotRepository>
 </distributionManagement>
 
